...
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="@id/title_view"
        app:layout_constraintTop_toTopOf="@id/title_view"
        app:layout_constraintBottom_toBottomOf="@id/title_view"
        android:background="@android:color/transparent">
        <ImageView
            android:id="@+id/button_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_close_white"
            android:background="@drawable/rectangular_button_click_selector"/>
    </FrameLayout>
...
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/title_view"
        app:layout_constraintEnd_toStartOf="@+id/button_close_rippled_wrapper"
        app:layout_constraintTop_toTopOf="@id/title_view"
        android:background="@android:color/transparent">
        <ImageView
            android:id="@+id/button_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangular_button_click_selector"
            android:src="@drawable/ic_edit_white"/>
    </FrameLayout>
...
            android:layout_gravity="center"
            android:background="@drawable/rectangular_button_click_selector"
            android:src="@drawable/ic_cooking_white"/>
    </FrameLayout>

    <EditText
        android:id="@+id/recipe_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_view"
...
        android:paddingBottom="9dp"
        android:text="@string/result_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_layout"/>

    <korablique.recipecalculator.ui.calckeyboard.CalcEditText
        android:id="@+id/total_weight_edit_text"
        style="@style/RobotoMonoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="15dp"
        android:paddingBottom="9dp"
        android:maxLines="1"
        android:maxLength="30"
        custom:min_value="0"
        custom:max_value="9999999"
        custom:digits_after_decimal_dot="1"
        tools:text="100"
        app:layout_constraintLeft_toRightOf="@id/weight_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weight_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/weight_text_view"/>

    <include layout="@layout/activity_bucket_list_comment_layout" />
...
