<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/delete_ingredient"
        android:title="@string/delete_ingredient" />
    <item android:id="@+id/comment_ingredient"
        android:title="@string/edit_ingredient_comment" />
</menu>